--- a/charles.wong/pom.xml
+++ b/charles.wong/pom.xml
@@ -12,48 +12,35 @@
     <groupId>com.example</groupId>
     <artifactId>ehb</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>charles.wong</name>
-    <description>charles.wong</description>
+    <name>anderlechtse-gazet</name>
+    <description>News Website for Anderlecht</description>
 
     <properties>
         <java.version>17</java.version>
     </properties>
 
     <dependencies>
-        <!-- Jakarta Persistence -->
-        <dependency>
-            <groupId>jakarta.persistence</groupId>
-            <artifactId>jakarta.persistence-api</artifactId>
-            <version>3.1.0</version> <!-- Controleer de laatste versie online -->
-        </dependency>
-
-        <!-- Andere noodzakelijke dependencies -->
-        <!-- JPA -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
-        <!-- Thymeleaf -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
 
-        <!-- Web -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!-- Test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
 
-        <!-- H2 Database -->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
@@ -64,11 +51,9 @@
         <dependency>
             <groupId>jakarta.validation</groupId>
             <artifactId>jakarta.validation-api</artifactId>
-            <version>3.0.0</version> <!-- Zorg ervoor dat je de juiste versie gebruikt -->
+            <version>3.0.0</version>
         </dependency>
-
     </dependencies>
-
 
     <build>
         <plugins>
@@ -83,7 +68,6 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
             </plugin>
-
         </plugins>
     </build>
 </project>
